# regular-grid

./: README.md  regular-grid.cabal  regular-tile.cabal
Data/: Grid.hs  Tile.hs
Data/Graph/: Grid.hs
Data/Graph/Grid/: Cheby.hs  Hex.hs  Projection.hs  Rect.hs  Vertex.hs
Data/Grid/: Cheby.hs  Hex.hs  Rect.hs  Vertex.hs
tests/: properties.hs
