name:                regular-grid
version:             0.3.0.0
synopsis:            operations on regular planar graphs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) 2013 Craig Roche
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Grid
    Data.Grid.Vertex
    Data.Grid.Rect
    Data.Grid.Cheby
    Data.Grid.Hex
  build-depends:       base, hashable >=1.2 && <1.3

Test-Suite properties
    type:               exitcode-stdio-1.0
    main-is:            properties.hs
    ghc-options:        -w
    hs-source-dirs:     tests
    build-depends:      regular-grid,
                        base,
                        QuickCheck        >=2.7 && <3,
                        tasty-th          ==0.1.*,
                        tasty-quickcheck  >=0.8 && <1
