name:                regular-tile
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) 2013 Craig Roche
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Tile
  -- other-modules:
  build-depends:       base ==4.6.*
